--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,8 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <color name="equipStatusOk">#A4C639</color>
+    <color name="equipStatusBad">#FF0000</color>
+    <color name="equipStatusUnknown">#C0C0C0</color>
 </resources>
